--- a/frontend/BlogDetails.html
+++ b/frontend/BlogDetails.html
@@ -34,7 +34,7 @@
             <a class="nav-link  active me-4 fw-semibold  content-family" aria-current="page" href="./PagesHtml/AboutUs.html">PAGE</a>
           </li>
           <li class="nav-item d-flex justify-content-center align-items-center">
-            <a class="nav-link  active me-4 fw-semibold  content-family" aria-current="page" href="#">BLOG</a>
+            <a class="nav-link  active me-4 fw-semibold  content-family" aria-current="page" href="./Blog.html">BLOG</a>
           </li>
           <li class="nav-item d-flex justify-content-center align-items-center">
             <a class="nav-link  active me-4 fw-semibold  content-family" aria-current="page" href="#">DONATION</a>
@@ -68,8 +68,61 @@
     <img src="./Asserts/image/pages/blogs/blog-detials.png" class="col-12  p-0">
   </div>
  
+  <section class="padding-section container row mx-auto blog-details">
+  </section>
 
-  <!-- footer -->
+  <section class="padding-section container row mx-auto blog-details">
+    <div class="customer-review d-flex flex-column gap-2 justify-content-center align-items-center p-5 rounded-2 mx-2 " >   
+      <img src = "./Asserts/image/home-page/faithful-hearts/colen.png" >
+      <div class="quote fs-4 content-family text-black px-lg-5 text-center mx-auto "></div> 
+    </div>
+
+     <div class="row my-5 d-lg-flex   d-none " >
+      <img src="./Asserts/image/pages/blogs/building.png" class="col-5 py-lg-5">
+    <img src="./Asserts/image/pages/blogs/tree.png" class="col-4 py-lg-5">
+    <img src="./Asserts/image/pages/blogs/lady.png" class="col-3 py-lg-5">
+    </div>
+  </section>
+
+  <section>
+    <div class="container padding-section  mx-auto d-flex flex-lg-row flex-column overflow-scroll article-carousal-body  my-3">
+      <div class="row  g-4 flex-nowrap mt-0 comment-cards-container ">
+      </div>
+      
+    </div>
+    <div class="d-flex justify-content-between container  align-items-center flex-column flex-lg-row  mb-5 padding-section gap-1 ">
+  
+      <div class="content-family fw-medium fs-5  text-black comment-tags ">tags :
+      </div>
+      <!-- <div>
+        <button class="bg-primary  p-2 rounded-circle  border-0  "><img src="./Asserts/image/pages/blogs/instagram.png"></button>
+      <button class="bg-success  p-2 rounded-circle  border-0  "><img src="./Asserts/image/pages/blogs/instagram.png"></button>
+      <button class="bg-danger  p-2 rounded-circle  border-0  "><img src="./Asserts/image/pages/blogs/instagram.png"></button>
+      <button class="bg-info  p-2 rounded-circle  border-0  "><img src="./Asserts/image/pages/blogs/instagram.png"></button>
+      </div> -->
+    </div>
+  </section>
+
+
+  <section class="px-3 padding-section container px-5" style="margin-top: 10rem;">
+    <h4 class="heading-family">A Better Building</h4>
+    <p class="content-family my-3 w-50">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using.</p>
+    <div class="content-family"><input type="checkbox" class="me-2">Save my name, email, and website in this browser for the next time I comment.</div>
+   <div class="d-flex flex-column  justify-content-between mt-5">
+    <div class="row gap-3 justify-content-xl-start  justify-content-center ">
+      <input class="col-xl-4 col-10 p-2 rounded-2 my-3 name-box" type="text" placeholder="name">
+    <input class="col-xl-4 col-10 p-2  rounded-2 my-3" type="text" placeholder="email">
+    <input class="col-xl-3 col-10 p-2  rounded-2 my-3" type="text" placeholder="website">
+    <textarea class="col-xl-12 col-10 border border-2 border-secondary rounded-1 comment-box" rows="8" placeholder = "comment"></textarea>
+    </div>
+    <button class="all-buttons my-5 d-block w-25 post-comment">POST COMMENT</button>
+   </div>
+  
+
+  </section>
+
+    
+  <!-- footer  -->
   <section class="container-fluid padding-section footer-sec bg-black mt-5">
 
     <div class="padding-section container mx-auto">
